Raise timeout to 45 minutes for some Panzer tests for CUDA build (#2318)
The tests that have the timeouts raised take nearly 40 minutes to complete for
a CUDA buld on hansen/shiller.  Therefore, I set the timeout to 45 minutes to
be safe.

--- a/packages/panzer/adapters-stk/example/CurlLaplacianExample/CMakeLists.txt
+++ b/packages/panzer/adapters-stk/example/CurlLaplacianExample/CMakeLists.txt
@@ -23,6 +23,10 @@ TRIBITS_ADD_ADVANCED_TEST(
   COMM mpi
   )
 
+IF (TPL_ENABLE_CUDA)
+  SET(CurlLaplacianExample-ConvTest-Quad-Order-4-TIMEOUT_ARGS TIMEOUT 2700)
+ENDIF()
+
 FOREACH( ORDER 1 2 3 4 )
   TRIBITS_ADD_ADVANCED_TEST(
     CurlLaplacianExample-ConvTest-Quad-Order-${ORDER}
@@ -56,6 +60,7 @@ FOREACH( ORDER 1 2 3 4 )
            32
       PASS_REGULAR_EXPRESSION "Test Passed"
     COMM mpi
+    ${CurlLaplacianExample-ConvTest-Quad-Order-${ORDER}-TIMEOUT_ARGS}
     )
 ENDFOREACH() 
 
